Comment out Blog Card section in index.html
Commented out the Blog Card section in index.html.

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
                 <a href="cryptography.html" class="card-link">Enter ⟶</a>
             </div>
 
-            <!-- Blog Card -->
+            <!-- Blog Card
             <div class="feature-card" data-keywords="blog articles writing thoughts philosophy mathematics computation">
                 <div class="card-icon">⊙</div>
                 <h3>Blog</h3>
                 <p>Insights on rationalism, computation, classical music, poetry, and the intersection of art and logic.</p>
                 <a href="blog.html" class="card-link">Enter ⟶</a>
-            </div>
+            </div>-->
 
             <!-- About Card -->
             <div class="feature-card" data-keywords="about contact aeon logic information">
